Got calculations functional for a single hardcoded test